# student-management-system-c

./: .gitignore  CMakeLists.txt  Gestion des etudiants.cbp  Gestion des etudiants.depend  Gestion des etudiants.layout  README.md  etudiant.c  etudiant.h  etudiants.txt  file.c  file.h  icon.aps  main.c  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  utilities.c  utilities.h
